--- a/public/panier.html
+++ b/public/panier.html
@@ -102,7 +102,7 @@
                 </thead>
                 <tbody></tbody>
             </table>
-           <button id="ajouterCommandeButton" class="btn btn-primary">Ajouter la commande</button>
+           <button id="ajouterCommandeButton" class="btn btn-primary">  <i class="fas fa-shopping-bag"></i>  Ajouter la commande</button>
         </div>
 
           <script>
